--- a/header/header.html
+++ b/header/header.html
@@ -5,8 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:title" name="site_title" content="">
-        <!--<meta property="og:url" name="site_url" content="ext.homedepot.com/how-to-guides/posts/howto-three-season-garden.html">-->
-        <meta property="og:site_name" name="site_name" content="The Home Depot provides ideas for using tile creatively throughout your home. From flooring to backsplashes, browse a variety of tilescapes and be inspired.">
+        <meta property="og:site_name" name="site_name" content="">
         <meta property="og:image" content="">
 
         <link rel="stylesheet" href="css/pages/header.css">
